--- a/form.css
+++ b/form.css
@@ -1,6 +1,9 @@
+html{
+    background-color: black;
+}
 form{
     gap: 15px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     width: 200px;
     display: flex;
     flex-direction: column;
